--- a/webpack-tailwind-starter/package.json
+++ b/webpack-tailwind-starter/package.json
@@ -1,27 +1,24 @@
 {
-  "name": "tailwind-webpack",
+  "name": "webpack-tailwind",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack serve",
-    "build": "webpack"
+    "build": "webpack",
+    "dev": "webpack serve"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.17.9",
-    "@babel/preset-env": "^7.16.11",
-    "babel-loader": "^8.2.5",
-    "css-loader": "^6.7.1",
-    "postcss": "^8.4.12",
-    "postcss-loader": "^6.2.1",
-    "postcss-preset-env": "^7.4.4",
-    "style-loader": "^3.3.1",
-    "tailwindcss": "^3.0.24",
-    "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.1"
+    "css-loader": "^7.1.2",
+    "postcss": "^8.4.38",
+    "postcss-loader": "^8.1.1",
+    "postcss-preset-env": "^9.5.14",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.4",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
